[gd_scene load_steps=16 format=3 uid="uid://blf5kg2ltktmv"]

[ext_resource type="Script" path="res://Fighter/fighter.gd" id="1_fxjtp"]
[ext_resource type="Script" path="res://Fighter/Attack.gd" id="2_0sjiy"]
[ext_resource type="Texture2D" uid="uid://wqjk0d3jftmh" path="res://Assets/playerspritesheet.png" id="2_p04e2"]
[ext_resource type="Texture2D" uid="uid://dajhe7fpmmlns" path="res://Assets/Asset Packs 1-4 (final)/Asset Pack-V3/Player Punch/Player Punch 64x64.png" id="3_tt8nu"]

[sub_resource type="Resource" id="Resource_pw72m"]
script = ExtResource("2_0sjiy")
input_trigger = &""
startup_frames = 5
active_frames = 3
recovery_frames = 10

[sub_resource type="Resource" id="Resource_f7m1c"]
script = ExtResource("2_0sjiy")
input_trigger = &"punch"
startup_frames = 4
active_frames = 2
recovery_frames = 14
next_attack = SubResource("Resource_pw72m")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_caf4h"]
radius = 4.0
height = 10.0

[sub_resource type="Animation" id="Animation_b5wgp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MovementSpritesheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackSpritesheet:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hitbox:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MovementSpritesheet:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AttackSpritesheet:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("MovementSpritesheet:offset")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, -17)]
}

[sub_resource type="Animation" id="Animation_h41lx"]
resource_name = "idle"
length = 0.85
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MovementSpritesheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackSpritesheet:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MovementSpritesheet:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_5mxmd"]
resource_name = "punch"
length = 0.8
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AttackSpritesheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 2, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hitbox:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.41, 0.78),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.78),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0],
"method": &"set_state"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MovementSpritesheet:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.78),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AttackSpritesheet:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_dpmdg"]
resource_name = "run"
length = 0.75
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MovementSpritesheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14, 15, 16, 17]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_77rl0"]
_data = {
"RESET": SubResource("Animation_b5wgp"),
"idle": SubResource("Animation_h41lx"),
"punch": SubResource("Animation_5mxmd"),
"run": SubResource("Animation_dpmdg")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8jcw5"]
size = Vector2(9, 27)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7nxcw"]
size = Vector2(50, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wymt6"]
size = Vector2(10, 5)

[node name="Fighter" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 2
motion_mode = 1
script = ExtResource("1_fxjtp")
attack = SubResource("Resource_f7m1c")

[node name="MovementSpritesheet" type="Sprite2D" parent="."]
y_sort_enabled = true
texture = ExtResource("2_p04e2")
offset = Vector2(2, -17)
hframes = 10
vframes = 2
frame = 1
region_rect = Rect2(35.4612, 45, 615.582, 51)

[node name="AttackSpritesheet" type="Sprite2D" parent="."]
visible = false
y_sort_enabled = true
position = Vector2(2, -17)
texture = ExtResource("3_tt8nu")
hframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_caf4h")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_77rl0")
}

[node name="Hurtbox" type="Area2D" parent="."]
position = Vector2(0, -16)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("RectangleShape2D_8jcw5")
debug_color = Color(1, 0.6, 0.701961, 0.419608)

[node name="Range" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
shape = SubResource("RectangleShape2D_7nxcw")

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2(35, -20)
collision_layer = 8
collision_mask = 32
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-5, 1.5)
shape = SubResource("RectangleShape2D_wymt6")
debug_color = Color(1.12806e-09, 0.000889909, 0.00125152, 0.42)

[connection signal="area_entered" from="Range" to="." method="_on_range_area_entered"]
[connection signal="area_exited" from="Range" to="." method="_on_range_area_exited"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
